syntax = "proto3";
import "google/protobuf/wrappers.proto";
package wechaty;
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/base.proto
 ******************************************************************/






message StartRequest {}
message StartResponse {}

message StopRequest {}
message StopResponse {}

message VersionRequest {}
message VersionResponse {
  string version = 1;
}

message LogoutRequest {}
message LogoutResponse {}

message DingRequest {
  string data = 1;
}
message DingResponse {
  // Ding has no return value
  // Puppet should emit a `ding` event when it receives a `ding()` call
}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/contact.proto
 ******************************************************************/








enum ContactGender {
  CONTACT_GENDER_UNSPECIFIED = 0;
  CONTACT_GENDER_MALE        = 1;
  CONTACT_GENDER_FEMALE      = 2;
}

enum ContactType {
  CONTACT_TYPE_UNSPECIFIED = 0;
  CONTACT_TYPE_PERSONAL    = 1;
  CONTACT_TYPE_OFFICIAL    = 2;
}

message ContactListRequest {}
message ContactListResponse {
  repeated string ids = 1;
}

message ContactPayloadRequest {
  string id = 1;
}
message ContactPayloadResponse {
  string        id        = 1;
  ContactGender gender    = 2;
  ContactType   type      = 3;
  string        name      = 4;
  string        avatar    = 5;
  string        address   = 6;
  string        alias     = 7;
  string        city      = 8;
  bool          friend    = 9;
  string        province  = 10;
  string        signature = 11;
  bool          star      = 12;
  string        weixin    = 13;
}

message ContactSelfQRCodeRequest {}
message ContactSelfQRCodeResponse {
  string qrcode = 1;
}

message ContactSelfNameRequest {
  string name = 1;
}
message ContactSelfNameResponse {}

message ContactSelfSignatureRequest {
  string signature = 1;
}
message ContactSelfSignatureResponse {}

message ContactAliasRequest {
  string id = 1;
  // nullable
  google.protobuf.StringValue alias = 2;
}
message ContactAliasResponse {
  google.protobuf.StringValue alias = 1;
}

message ContactAvatarRequest {
  string id = 1;
  // nullable
  google.protobuf.StringValue filebox = 2;
}
message ContactAvatarResponse {
  google.protobuf.StringValue filebox = 1;
}

/******************************************************************
 * Proto File: ../proto/wechaty/puppet/event.proto
 ******************************************************************/






enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;

  EVENT_TYPE_HEARTBEAT = 1;
  EVENT_TYPE_MESSAGE   = 2;
  EVENT_TYPE_DONG      = 3;

  reserved 4 to 15;

  EVENT_TYPE_ERROR       = 16;
  EVENT_TYPE_FRIENDSHIP  = 17;
  EVENT_TYPE_ROOM_INVITE = 18;
  EVENT_TYPE_ROOM_JOIN   = 19;
  EVENT_TYPE_ROOM_LEAVE  = 20;
  EVENT_TYPE_ROOM_TOPIC  = 21;
  EVENT_TYPE_SCAN        = 22;
  EVENT_TYPE_READY       = 23;
  EVENT_TYPE_RESET       = 24;
  EVENT_TYPE_LOGIN       = 25;
  EVENT_TYPE_LOGOUT      = 26;
}

message EventRequest {}

message EventResponse {
  EventType type = 1;
  // TODO: Huan(202002) consider to use a PB Map?
  string payload = 2; // JSON.stringify({ ... })
}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/friendship.proto
 ******************************************************************/








enum FriendshipType {
  FRIENDSHIP_TYPE_UNSPECIFIED = 0;
  FRIENDSHIP_TYPE_CONFIRM     = 1;
  FRIENDSHIP_TYPE_RECEIVE     = 2;
  FRIENDSHIP_TYPE_VERIFY      = 3;
}

enum FriendshipSceneType {
  FRIENDSHIP_SCENE_TYPE_UNSPECIFIED = 0;

  FRIENDSHIP_SCENE_TYPE_QQ       = 1;
  FRIENDSHIP_SCENE_TYPE_EMAIL    = 2;
  FRIENDSHIP_SCENE_TYPE_WEIXIN   = 3;
  FRIENDSHIP_SCENE_TYPE_QQTBD    = 12;
  FRIENDSHIP_SCENE_TYPE_ROOM     = 14;
  FRIENDSHIP_SCENE_TYPE_PHONE    = 15;
  FRIENDSHIP_SCENE_TYPE_CARD     = 17;
  FRIENDSHIP_SCENE_TYPE_LOCATION = 18;
  FRIENDSHIP_SCENE_TYPE_BOTTLE   = 25;
  FRIENDSHIP_SCENE_TYPE_SHAKING  = 29;
  FRIENDSHIP_SCENE_TYPE_QRCODE   = 30;
}

message FriendshipPayloadRequest {
  string                      id      = 1;
  google.protobuf.StringValue payload = 2;
}
message FriendshipPayloadResponse {
  string              id         = 1;
  string              contact_id = 2;
  string              hello      = 3;
  FriendshipType      type       = 4;
  string              stranger   = 5;
  string              ticket     = 6;
  FriendshipSceneType scene      = 7;
}

message FriendshipSearchPhoneRequest {
  string phone = 1;
}
message FriendshipSearchPhoneResponse {
  // nullable
  google.protobuf.StringValue contact_id = 1;
}

message FriendshipSearchWeixinRequest {
  string weixin = 1;
}
message FriendshipSearchWeixinResponse {
  // nullable
  google.protobuf.StringValue contact_id = 1;
}

message FriendshipAddRequest {
  string contact_id = 1;
  string hello = 2;
}
message FriendshipAddResponse {}

message FriendshipAcceptRequest {
  string id = 1;
}
message FriendshipAcceptResponse {}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/message.proto
 ******************************************************************/








enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED  = 0;

  MESSAGE_TYPE_ATTACHMENT   = 1;
  MESSAGE_TYPE_AUDIO        = 2;
  MESSAGE_TYPE_CONTACT      = 3;
  MESSAGE_TYPE_EMOTICON     = 4;
  MESSAGE_TYPE_IMAGE        = 5;
  MESSAGE_TYPE_TEXT         = 6;
  MESSAGE_TYPE_VIDEO        = 7;
  MESSAGE_TYPE_CHAT_HISTORY = 8;
  MESSAGE_TYPE_LOCATION     = 9;
  MESSAGE_TYPE_MINI_PROGRAM = 10;
  MESSAGE_TYPE_TRANSFER     = 11;
  MESSAGE_TYPE_RED_ENVELOPE = 12;
  MESSAGE_TYPE_RECALLED     = 13;
  MESSAGE_TYPE_URL          = 14;
}

enum ImageType {
  IMAGE_TYPE_UNSPECIFIED = 0;
  IMAGE_TYPE_THUMBNAIL   = 1;
  IMAGE_TYPE_HD          = 2;
  IMAGE_TYPE_ARTWORK     = 3;
}

message MessagePayloadRequest {
  string id = 1;
}
message MessagePayloadResponse {
  string      id                 = 1;
  string      filename           = 2;
  string      text               = 3;
  uint64      timestamp          = 4;
  MessageType type               = 5;
  string      from_id            = 6;
  string      room_id            = 7;
  string      to_id              = 8;
  repeated    string mention_ids = 9;
}

message MessageImageRequest {
  string    id   = 1;
  ImageType type = 2;
}
message MessageImageResponse {
  string filebox = 1;
}

message MessageContactRequest {
  string id = 1;
}
message MessageContactResponse {
  string id = 1;
}

message MessageFileRequest {
  string id = 1;
}
message MessageFileResponse {
  string filebox = 1;
}

message MessageMiniProgramRequest {
  string id = 1;
}
message MessageMiniProgramResponse {
  string mini_program = 1;
}

message MessageUrlRequest {
  string id = 1;
}
message MessageUrlResponse {
  string url_link = 1;
}

message MessageSendContactRequest {
  string conversation_id = 1;
  string contact_id = 2;
}
message MessageSendContactResponse {
  // nullable
  google.protobuf.StringValue id = 1;
}

message MessageSendFileRequest {
  string conversation_id = 1;
  string filebox = 2;
}
message MessageSendFileResponse {
  google.protobuf.StringValue id = 1;
}

message MessageSendTextRequest {
  string conversation_id = 1;
  string text = 2;
  repeated string mentonal_ids = 3;
}
message MessageSendTextResponse {
  google.protobuf.StringValue id = 1;
}

message MessageSendMiniProgramRequest {
  string conversation_id = 1;
  string mini_program = 2;
}
message MessageSendMiniProgramResponse {
  google.protobuf.StringValue id = 1;
}

message MessageSendUrlRequest {
  string conversation_id = 1;
  string url_link = 2;
}
message MessageSendUrlResponse {
  google.protobuf.StringValue id = 1;
}

message MessageRecallRequest {
  string id = 1;
}
message MessageRecallResponse {
  bool success = 1;
}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/room.proto
 ******************************************************************/








message RoomListRequest {}
message RoomListResponse {
  repeated string ids = 1;
}

message RoomPayloadRequest {
  string id = 1;
}
message RoomPayloadResponse {
  string   id               = 1;
  string   topic            = 2;
  string   avatar           = 3;
  string   owner_id         = 4;
  repeated string admin_ids  = 5;
  repeated string member_ids = 6;
}

message RoomAddRequest {
  string id = 1;
  string contact_id = 2;
}
message RoomAddResponse {}

message RoomAvatarRequest {
  string id = 1;
}
message RoomAvatarResponse {
  string filebox = 1;
}

message RoomCreateRequest {
  repeated string contact_ids = 1;
  string topic = 2;
}
message RoomCreateResponse {
  string id = 1;
}

message RoomDelRequest {
  string id = 1;
  string contact_id = 2;
}
message RoomDelResponse {}

message RoomQuitRequest {
  string id = 1;
}
message RoomQuitResponse {}

message RoomTopicRequest {
  string id = 1;
  google.protobuf.StringValue topic = 2;
}
message RoomTopicResponse {
  google.protobuf.StringValue topic = 1;
}

message RoomQRCodeRequest {
  string id = 1;
}
message RoomQRCodeResponse {
  string qrcode = 1;
}

message RoomAnnounceRequest {
  string id = 1;
  google.protobuf.StringValue text = 2;
}
message RoomAnnounceResponse {
  google.protobuf.StringValue text = 1;
}

/******************************************************************
 * Proto File: ../proto/wechaty/puppet/room_invitation.proto
 ******************************************************************/








message RoomInvitationPayloadRequest {
  string                      id      = 1;
  google.protobuf.StringValue payload = 2;
}
message RoomInvitationPayloadResponse {
  string   id                = 1;
  string   inviter_id        = 2;
  string   topic             = 3;
  uint32   member_count      = 4;
  repeated string member_ids = 5;
  uint64   timestamp         = 6;
  string   avatar            = 7;
  string   invitation        = 8;
  string   receiver_id       = 9;
}

message RoomInvitationAcceptRequest {
  string id = 1;
}
message RoomInvitationAcceptResponse {}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/room_member.proto
 ******************************************************************/






message RoomMemberPayloadRequest {
  string id = 1;
  string member_id = 2;
}
message RoomMemberPayloadResponse {
  string id         = 1;
  string room_alias = 2;
  string inviter_id = 3;
  string avatar     = 4;
  string name       = 5;
}

message RoomMemberListRequest {
  string id = 1;
}
message RoomMemberListResponse {
  repeated string member_ids = 1;
}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet/tag.proto
 ******************************************************************/








message TagContactAddRequest {
  string id = 1;
  string contact_id = 2;
}
message TagContactAddResponse {}

message TagContactRemoveRequest {
  string id = 1;
  string contact_id = 2;
}
message TagContactRemoveResponse {}

message TagContactDeleteRequest {
  string id = 1;
}
message TagContactDeleteResponse {}

message TagContactListRequest {
  google.protobuf.StringValue contact_id = 1;
}
message TagContactListResponse {
  repeated string ids = 1;
}
/******************************************************************
 * Proto File: ../proto/wechaty/puppet.proto
 ******************************************************************/
/**
 *
 * Wechaty Puppet gRPC Protocol Buffers
 *  https://github.com/chatie/grpc/
 *  Huan LI <zixia@zixia.net>
 *  Apr 2018
 *  License: Apache-2.0
 *
 * Google Protocol Buffers
 *  Style Guide - https://developers.google.com/protocol-buffers/docs/style
 *
 */















service Puppet {
  /**
   *
   * Base
   *
   */
  rpc Start (StartRequest)  returns (StartResponse) {}
  rpc Stop (StopRequest)    returns (StopResponse) {}

  rpc Logout (LogoutRequest)      returns (LogoutResponse) {}
  rpc Ding (DingRequest)          returns (DingResponse) {}
  rpc Version (VersionRequest)    returns (VersionResponse) {}

  /**
   *
   * Event - Server Stream
   *
   */
  rpc Event (EventRequest)  returns (stream EventResponse) {}

  /**
   *
   * Contact Self
   *
   */
  rpc ContactSelfQRCode (ContactSelfQRCodeRequest) returns (ContactSelfQRCodeResponse) {}
  rpc ContactSelfName (ContactSelfNameRequest) returns (ContactSelfNameResponse) {}
  rpc ContactSelfSignature (ContactSelfSignatureRequest) returns (ContactSelfSignatureResponse) {}

  /**
   *
   * Contact
   *
   */
  rpc ContactPayload (ContactPayloadRequest)  returns (ContactPayloadResponse) {}

  rpc ContactAlias (ContactAliasRequest) returns (ContactAliasResponse) {}
  rpc ContactAvatar (ContactAvatarRequest) returns (ContactAvatarResponse) {}

  rpc ContactList (ContactListRequest)        returns (ContactListResponse) {}

  /**
   *
   * Friendship
   *
   */
  rpc FriendshipPayload (FriendshipPayloadRequest)  returns (FriendshipPayloadResponse) {}

  rpc FriendshipSearchPhone (FriendshipSearchPhoneRequest) returns (FriendshipSearchPhoneResponse) {}
  rpc FriendshipSearchWeixin (FriendshipSearchWeixinRequest) returns (FriendshipSearchWeixinResponse) {}

  rpc FriendshipAdd (FriendshipAddRequest) returns (FriendshipAddResponse) {}
  rpc FriendshipAccept (FriendshipAcceptRequest) returns (FriendshipAcceptResponse) {}

  /**
   *
   * Message
   *
   */
  rpc MessagePayload (MessagePayloadRequest)  returns (MessagePayloadResponse) {}

  rpc MessageContact (MessageContactRequest) returns (MessageContactResponse) {}
  rpc MessageFile (MessageFileRequest) returns (MessageFileResponse) {}
  rpc MessageImage (MessageImageRequest) returns (MessageImageResponse) {}
  rpc MessageMiniProgram (MessageMiniProgramRequest) returns (MessageMiniProgramResponse) {}
  rpc MessageUrl (MessageUrlRequest) returns (MessageUrlResponse) {}

  rpc MessageSendContact (MessageSendContactRequest) returns (MessageSendContactResponse) {}
  rpc MessageSendFile (MessageSendFileRequest) returns (MessageSendFileResponse) {}
  rpc MessageSendText (MessageSendTextRequest) returns (MessageSendTextResponse) {}
  rpc MessageSendMiniProgram (MessageSendMiniProgramRequest) returns (MessageSendMiniProgramResponse) {}
  rpc MessageSendUrl (MessageSendUrlRequest) returns (MessageSendUrlResponse) {}

  rpc MessageRecall (MessageRecallRequest) returns (MessageRecallResponse) {}

  /**
   *
   * Room
   *
   */
  rpc RoomPayload (RoomPayloadRequest)  returns (RoomPayloadResponse) {}

  rpc RoomList (RoomListRequest)        returns (RoomListResponse) {}

  rpc RoomAdd (RoomAddRequest) returns (RoomAddResponse) {}
  rpc RoomAvatar (RoomAvatarRequest) returns (RoomAvatarResponse) {}
  rpc RoomCreate (RoomCreateRequest) returns (RoomCreateResponse) {}
  rpc RoomDel (RoomDelRequest) returns (RoomDelResponse) {}
  rpc RoomQuit (RoomQuitRequest) returns (RoomQuitResponse) {}

  rpc RoomTopic (RoomTopicRequest) returns (RoomTopicResponse) {}
  rpc RoomQRCode (RoomQRCodeRequest) returns (RoomQRCodeResponse) {}
  rpc RoomAnnounce (RoomAnnounceRequest) returns (RoomAnnounceResponse) {}

  /**
   *
   * Room Member
   *
   */
  rpc RoomMemberPayload (RoomMemberPayloadRequest) returns (RoomMemberPayloadResponse) {}

  rpc RoomMemberList (RoomMemberListRequest) returns (RoomMemberListResponse) {}

  /**
   *
   * Room Invitation
   *
   */
  rpc RoomInvitationPayload (RoomInvitationPayloadRequest)  returns (RoomInvitationPayloadResponse) {}
  rpc RoomInvitationAccept (RoomInvitationAcceptRequest) returns (RoomInvitationAcceptResponse) {}

  /**
   *
   * Tag
   *
   */
  rpc TagContactAdd (TagContactAddRequest) returns (TagContactAddResponse) {}
  rpc TagContactRemove (TagContactRemoveRequest) returns (TagContactRemoveResponse) {}
  rpc TagContactDelete (TagContactDeleteRequest) returns (TagContactDeleteResponse) {}
  rpc TagContactList (TagContactListRequest) returns (TagContactListResponse) {}

}
